Tue Nov 23 07:39:23 2004  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:

          Modified to support the MPC 'version' keyword.  If version is set,
          then we will set the SOVERSION macro.

Tue Nov 23 07:30:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/DLL.cpp:
          Fixed compile problems in unicode builds

Tue Nov 23 00:37:14 2004  Olli Savia  <ops@iki.fi>

        * examples/APG/ThreadPools/Futures.cpp:
          Removed unnecesary type cast in CompletionCallBack::update().
          Replaced NULL with 0 in Manager::shut_down().

        * examples/Export/dll.cpp:
          Added explicit static template member instantiation.

Mon Nov 22 13:45:05 2004  Chad Elliott  <elliott_c@ociweb.com>

        * bin/GNUmakefile.clone:

          Renamed GNUmakefile to GNUmakefile.clone to avoid being
          overwritten when bin.mpc is processed.

        * ACE-INSTALL.html:

          Changed documentation on building clone.cpp to take the above into
          account.

Mon Nov 22 19:33:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
          When building with gcc for cygwin the binutils package
          must also be installed.

Mon Nov 22 12:08:27 2004  Ciju John  <john_c@ociweb.com>

        * bin/MakeProjectCreator/config/notify.mpb:
          Fixed fuzz.pl caught inconsistencies.

Mon Nov 22 11:58:25 2004  Chad Elliott  <elliott_c@ociweb.com>

        * bin/fuzz.pl:

          Account for multiple whitespace when checking for non-bool return
          values on equality/in-equality operators.

Mon Nov 22 07:44:23 2004  Venkita Subramonian  <venkita@cs.wustl.edu>

        * Kokyu/Kokyu_dsrt.{cpp,h}:

          Changed the return type of
          DSRT_Dispatcher_Factory::create_dispatcher method from
          auto_ptr<DSRT_Dispatcher> to DSRT_Dispatcher*. This was causing
          build errors with VxWorks5.5.1_PPC85XX_GCC3.3. Thanks to Johnny