@@ -1,3 +1,9 @@
+Tue Nov 23 07:56:11 2004  Chad Elliott  <elliott_c@ociweb.com>
+
+        * bin/MakeProjectCreator/modules/AutomakeWorkspaceHelper.pm:
+
+          Added support for dynamically determining the includedir.
+
 Tue Nov 23 07:39:23 2004  Chad Elliott  <elliott_c@ociweb.com>
 
         * bin/MakeProjectCreator/templates/gnu.mpd:
